Admin password reset

--- a/client/src/components/layout/landing/landing.css
+++ b/client/src/components/layout/landing/landing.css
@@ -10,7 +10,7 @@
 
 /* custom styles */
 body {
-  padding: 4em;
+  /* padding: 4em; */
   background: #e5e5e5;
   font: 13px/1.4 Geneva, 'Lucida Sans', 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;
 }
